# adetailer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  huggingface_models.py  install.py  preload.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml  question.yaml
.github/workflows/: lgtm.yml  lint.yml  notlint.yml  pypi.yml  stale.yml  test.yml
aaaaaa/: conditional.py  helper.py  p_method.py  traceback.py  ui.py
adetailer/: __init__.py  __version__.py  args.py  common.py  mask.py  mediapipe.py  opts.py  traceback.py  ui.py  ultralytics.py
controlnet_ext/: __init__.py  common.py  controlnet_ext.py  controlnet_ext_forge.py  restore.py
scripts/: !adetailer.py
sd_webui/: __init__.py  devices.py  images.py  paths.py  processing.py  safe.py  script_callbacks.py  scripts.py  sd_samplers.py  shared.py
tests/: conftest.py  test_args.py  test_common.py  test_mask.py  test_mediapipe.py  test_opts.py  test_ultralytics.py
