[project]
name = "adetailer"
description = "An object detection and auto-mask extension for stable diffusion webui."
authors = [{ name = "dowon", email = "ks2515@naver.com" }]
requires-python = ">=3.8,<3.13"
readme = "README.md"
license = { text = "AGPL-3.0" }
dependencies = [
    "ultralytics>=8.1",
    "mediapipe>=0.10",
    "pydantic<3",
    "rich>=13",
    "huggingface_hub",
]
keywords = [
    "stable-diffusion",
    "stable-diffusion-webui",
    "adetailer",
    "ultralytics",
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/Bing-su/adetailer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "adetailer/__version__.py"

[tool.isort]
profile = "black"
known_first_party = ["launch", "modules"]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "C90",
    "E",
    "EM",
    "F",
    "FA",
    "I001",
    "ISC",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["launch", "modules"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
